@@ -5,7 +5,8 @@ import java.util.stream.Collectors;
 
 public class EmpData {
     public static void main(String[] args) {
-        List<Employee> emps = new ArrayList<Employee>();
+        // Creating a list of employees with their details.
+        List<Employee> emps = new ArrayList<>();
         emps.add(new Employee(1, "Jhansi", 32, "Female", "HR", 2011, 25000.0));
         emps.add(new Employee(2, "Smith", 25, "Male", "Sales", 2015, 13500.0));
         emps.add(new Employee(3, "David", 29, "Male", "Infrastructure", 2012, 18000.0));
@@ -23,85 +24,69 @@ public class EmpData {
         emps.add(new Employee(15, "Ashok", 23, "Male", "Infrastructure", 2018, 12798.3));
         emps.add(new Employee(16, "Sanvi", 26, "Female", "Development", 2015, 28900.0));
 
-
+        System.out.println("-------------------------1------------------------------");
         // 1) How many male and female employees are there in the Organization ?
         Map<String, Long> map1 = emps.stream()
                 .collect(Collectors.groupingBy(Employee::getGender, Collectors.counting()));
         System.out.println(map1);
 
-        System.out.println("***************1***************");
-
+        System.out.println("-------------------------2------------------------------");
         // 2) Print the name of all department in the organization ?
-        emps.stream().map(Employee::getDepartment).distinct().forEach(name -> System.out.println(name));
+        emps.stream().map(Employee::getDepartment).distinct().forEach(System.out::println);
 
-        System.out.println("***************2***************");
+        System.out.println("-------------------------3------------------------------");
 
         // 3) What is the average age of male and female employees ?
-        Map<String, Double> map2 = emps.stream()
-                .collect(Collectors.groupingBy(Employee::getGender, Collectors.averagingInt(Employee::getAge)));
+        Map<String, Double> map2 = emps.stream().collect(Collectors.groupingBy(Employee::getGender, Collectors.averagingInt(Employee::getAge)));
         System.out.println(map2);
 
-        System.out.println("***************3***************");
+        System.out.println("-------------------------4------------------------------");
 
         // 4) Get the details of highest paid employee in the organization?
-        Optional<Employee> optional = emps.stream()
-                .collect(Collectors.maxBy(Comparator.comparingDouble(Employee::getSalary)));
+        Optional<Employee> optional1 = emps.stream().max(Comparator.comparingDouble(Employee::getSalary));
+        Employee employee1 = optional1.get();
+        System.out.println(employee1);
 
-        if (optional.isPresent()) {
-            Employee employee = optional.get();
-            System.out.println(employee);
-        }
-
-        System.out.println("***************4***************");
+        System.out.println("-------------------------5------------------------------");
 
         // 5) Get the names of all employees who have joined after 2015?
-        emps.stream().filter(e -> e.yearOfJoining > 2015).map(e -> e.name).forEach(name -> System.out.println(name));
-        ;
+        emps.stream().filter(e -> e.yearOfJoining > 2015).map(e -> e.name).forEach(System.out::println);
 
-        System.out.println("***************5***************");
+        System.out.println("-------------------------6------------------------------");
 
         // 6) Count the number of employees in each department?
         Map<String, Long> map3 = emps.stream()
                 .collect(Collectors.groupingBy(Employee::getDepartment, Collectors.counting()));
         System.out.println(map3);
 
-        System.out.println("***************6***************");
+        System.out.println("-------------------------7------------------------------");
 
         // 7) What is the average salary of each department?
-        Map<String, Double> map4 = emps.stream().collect(
-                Collectors.groupingBy(Employee::getDepartment, Collectors.averagingDouble(Employee::getSalary)));
+        Map<String, Double> map4 = emps.stream().collect(Collectors.groupingBy(Employee::getDepartment, Collectors.averagingDouble(Employee::getSalary)));
         System.out.println(map4);
 
-        System.out.println("***************7***************");
+        System.out.println("-------------------------8------------------------------");
 
         // 8) Get the details of youngest male employee in the Development department?
         Optional<Employee> optional2 = emps.stream()
                 .filter(e -> e.getGender().equals("Male") && e.getDepartment().equals("Development"))
                 .min(Comparator.comparing(Employee::getAge));
+        optional2.ifPresent(System.out::println);
 
-        if (optional2.isPresent()) {
-            System.out.println(optional2.get());
-        }
-
-        System.out.println("***************8***************");
+        System.out.println("-------------------------9------------------------------");
 
         // 9) Who has the most working experience in the organization?
-        Optional<Employee> optional3 = emps.stream()
-                .collect(Collectors.minBy(Comparator.comparing(Employee::getYearOfJoining)));
+        Optional<Employee> optional3 = emps.stream().min(Comparator.comparing(Employee::getYearOfJoining));
+        optional3.ifPresent(System.out::println);
 
-        if (optional3.isPresent()) {
-            System.out.println(optional3.get());
-        }
-
-        System.out.println("***************9***************");
+        System.out.println("-------------------------10------------------------------");
 
         // 10) How many male and female employees are there in the Sales team?
         Map<String, Long> map5 = emps.stream().filter(e -> e.getDepartment().equals("Sales"))
                 .collect(Collectors.groupingBy(Employee::getGender, Collectors.counting()));
-
         System.out.println(map5);
 
-        System.out.println("***************10***************");
+        System.out.println("-------------------------11------------------------------");
 
         // 11) What is the average salary of male and female employees?
         Map<String, Double> averageSalaries = emps.stream()
@@ -109,7 +94,7 @@ public class EmpData {
         System.out.println("Average salary of male employees: " + averageSalaries.get("Male"));
         System.out.println("Average salary of female employees: " + averageSalaries.get("Female"));
 
-        System.out.println("***************11**************");
+        System.out.println("-------------------------12------------------------------");
 
         // 12) List down the names of all employees in each department.
         Map<String, List<String>> employeesByDepartment = emps.stream().collect(Collectors
@@ -119,7 +104,7 @@ public class EmpData {
             System.out.println("Employees: " + names);
         });
 
-        System.out.println("***************12***************");
+        System.out.println("-------------------------13------------------------------");
 
         // 13) What is the average salary and total salary of the whole organization?
         double totalSalary = emps.stream().mapToDouble(Employee::getSalary).sum();
@@ -127,11 +112,9 @@ public class EmpData {
         System.out.println("Total salary of the organization: " + totalSalary);
         System.out.println("Average salary of the organization: " + averageSalary);
 
-        System.out.println("***************13***************");
+        System.out.println("-------------------------14------------------------------");
 
-        // 14) Separate the employees who are younger or equal to 25 years from those
-        // employees who are older than 25 years.
-
+        // 14) Separate the employees who are younger or equal to 25 years from those employees who are older than 25 years.
         Map<Boolean, List<Employee>> partitionedByAge = emps.stream()
                 .collect(Collectors.partitioningBy(e -> e.getAge() <= 25));
         List<Employee> youngerOrEqualTo25 = partitionedByAge.get(true);
@@ -139,42 +122,36 @@ public class EmpData {
         System.out.println("Employees who are younger or equal to 25 years: " + youngerOrEqualTo25);
         System.out.println("Employees who are older than 25 years: " + olderThan25);
 
-        System.out.println("***************14***************");
+        System.out.println("-------------------------15------------------------------");
 
         // 15) Who is the oldest employee in the organization?
-        Optional<Employee> oldestEmployee = emps.stream().max((e1, e2) -> Integer.compare(e1.getAge(), e2.getAge()));
-        oldestEmployee.ifPresent(employee -> System.out
-                .println("The oldest employee is: " + employee.getName() + " (" + employee.getAge() + " years old)"));
+        Employee oldest = emps.stream().max(Comparator.comparingInt(Employee::getAge)).orElse(null);
+        System.out.println("Oldest employee: " + oldest);
 
-        System.out.println("***************15***************");
+        System.out.println("-------------------------16------------------------------");
 
-        // 16) Which employee has highest salary?
-        Optional<Employee> optional4 = emps.stream()
-                .collect(Collectors.maxBy(Comparator.comparing(Employee::getSalary)));
-
+       // 16) Which employee has highest salary?
+        Optional<Employee> optional4 = emps.stream().max(Comparator.comparing(Employee::getSalary));
         System.out.println(optional4.get());
 
-        System.out.println("***************16***************");
+        System.out.println("-------------------------17------------------------------");
 
-        // 17 Get the emp who is having Second highest salary?
+        // 17) Get the emp who is having Second-highest salary?
+        Optional<Employee> secondHighestSalaryEmployee = emps.stream().sorted((e1, e2) -> Double.compare(e2.getSalary(), e1.getSalary())) .skip(1) .findFirst();
+        secondHighestSalaryEmployee.ifPresent(employee -> System.out.println("The employee with the second highest salary is: " + employee.getName() + " (" + employee.getSalary() + ")"));
 
-        System.out.println("***************17***************");
+        System.out.println("-------------------------18------------------------------");
 
         // sort emps in salary descending order then skip first record
-        // Approach 1
-        Optional<Employee> findFirst = emps.stream().sorted(Comparator.comparing(Employee::getSalary).reversed())
-                .skip(1).findFirst();
-        System.out.println(findFirst.get());
+        System.out.println("----------Approach 1----------");
+        Optional<Employee> findFirst = emps.stream().sorted(Comparator.comparing(Employee::getSalary).reversed()).skip(1).findFirst();
+        findFirst.ifPresent(System.out::println);
 
-        // Approach 2
-        List<Employee> collect = emps.stream().sorted(Comparator.comparing(Employee::getSalary).reversed())
-                .collect(Collectors.toList());
+        System.out.println("----------Approach 2----------");
+        List<Employee> collect = emps.stream().sorted(Comparator.comparing(Employee::getSalary).reversed()).toList();
         System.out.println(collect.get(1));
 
-        System.out.println("******************************");
-
-
-
+        System.out.println("******************************************END*********************************************");
     }
 }
 
